Name:                Chart-sunroof
Version:             0.1
Synopsis:            Chart backend based on the HTML5 canvas element.
Homepage:            https://github.com/jbracker/chart-sunroof
Bug-reports:         https://github.com/jbracker/chart-sunroof/issues
License:             BSD3
License-file:        LICENSE
Author:              Jan Bracker <jan.bracker@googlemail.com>
Maintainer:          Jan Bracker <jan.bracker@googlemail.com>
Copyright:           (c) 2013 Jan Bracker
Category:            Web, Graphics, Javascript
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
Description:
  Chart backend based on the HTML5 canvas element. Written in Sunroof.

Extra-source-files:
  README.md
  LICENSE

Library
  Exposed-modules:     
  default-language:    Haskell2010
  build-depends:       base             >= 4.3.1 && < 5,
                       sunroof-compiler >= 0.2 && < 0.3,
                       Boolean          >= 0.2 && < 0.3,
                       data-default     >= 0.5 && < 0.6,
                       mtl              == 2.1.2,
                       operational      >= 0.2.0.3 && < 0.3,
                       transformers     >= 0.3 && < 0.4
  GHC-options: -Wall

source-repository head
  type:     git
  location: git://github.com/jbracker/chart-sunroof.get
